restored original watch model

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <legend> Customize Watch :</legend>
                 <label for="engtxt">Engraved Text :</label>
                 <input autofocus type="text" id="engtxt" maxlength="5" placeholder="Enter Text here ..." />
-                <!--
+
                 <br> Embossed Text:
                 <input type="text" id="embosstxt" maxlength="5">
                 <div class="radio-grp">
@@ -76,7 +76,7 @@
                     <label>
                         <input class="engraveSelect" type="checkbox">Use Engraved Text</label>
                 </div>
-            -->
+
             </fieldset>
         </div>
 
@@ -101,7 +101,7 @@
     <script src="js/DDSLoader.js"></script>
     <script src="js/MTLLoader.js"></script>
     <script src="js/OBJLoader.js"></script>
-    <script src="main1.js"></script>
+    <script src="main.js"></script>
 
 </body>
 
